# made_advance_cpp_autumn_2022

./: .gitignore  README.md
1_homework/: .gitignore  homework.md
1_homework/csv_examples/: input.csv
1_homework/roads_copy/src/: CMakeLists.txt  ReadCsv.c  ReadCsv.h  Roadbed.h  Statistics.h  main.c
1_homework/roads_copy/src/builds/: CMakeCache.txt  Makefile  cmake_install.cmake  main
1_homework/roads_copy/test/: test_calc.c
matrix/: CMakeLists.txt  main.cpp
matrix/matrix_lib/: CMakeLists.txt  Custom_vector.cpp  Custom_vector.h  Matrix.cpp  Matrix.h  lib.h
matrix/tests/: CMakeLists.txt  test_determinat.h  test_get_column.h  test_get_diagonal.h  test_get_row.h  test_inicialization.h  test_invalid_argument.h  test_inverse.h  test_matrix.cpp  test_minus.h  test_multiply.h  test_plus.h  test_transpouse.h
set/: CMakeLists.txt  main.cpp  out
set/set_lib/: 1.cpp  AVLTree.cpp  CMakeLists.txt  erase.cpp  find.cpp  insert.cpp  iterator.cpp  lib.h
set/tests/: CMakeLists.txt  test_invalid_argument.h  test_matrix.cpp
