# cmake_minimum_required(VERSION 3.22.1)
# project(set_lib)

# set(SET_LIB_LIBRARIES)
# set(SET_LIB_INCLUDE_DIRS)

# file(GLOB SOURCES *.cpp)
# file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

# add_library(${PROJECT_NAME} STATIC ${SOURCES})

# set(SET_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
# set(SET_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

cmake_minimum_required(VERSION 3.18.4)
project(set_lib)

# set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-fprofile-arcs -ftest-coverage -fPIC -O0")

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} ${SOURCES})

set(FIB_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(FIB_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
